# standardese-test

./: .gitignore  CMakeLists.txt  Gemfile  README.md  _config.yml  _local_config.yml  date.txt  vcpkg.json
.github/workflows/: build-docs.yml
api/: doc_test.md  standardese_entities.md  standardese_files.md
cmake/: Findstandardese.cmake  standardese-testConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/contents/: README.md
examples/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/test/: test.h
